--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -9,13 +9,13 @@ header
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='#')
-            img(src='images/spa-logo.png')
+            img(src='images/spa-logo.png', alt='spa-logo')
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li.active
-              a(href='#') Home    
+              a(href='#') Home
             li
-              a(href='#about') About    
+              a(href='#about') About
             li
               a(href='#contact') Contact
 
