Update header.jade and footer.jade

--- a/app/styles/_variable.scss
+++ b/app/styles/_variable.scss
@@ -42,7 +42,7 @@ $gray-light-2:                         #e8ecef;
 $gray-light-3:                         #e2e2e2;
 $gray-light-4:                         #f8f9fb;
 
-$inpi-blue:                            #00798c;
+// $inpi-blue:                            #242424;
 $blue-1:                               #96d4df;
 $blue-2:                               #71b9c8;
 
