--- a/app/views/blocks/footer.jade
+++ b/app/views/blocks/footer.jade
@@ -4,12 +4,34 @@ footer.main-footer.hidden-print
       .text-block.idea-text
         p  Ý KIẾN
         p  KHÁCH HÀNG
-    .slider-image.col-md-9
-      p Slider this here
+    .slide-footer.col-md-9
+      .single-slick
+        .item
+          .image-slide-block.col-md-4
+            img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
+          .slide-text.col-md-8
+            h3   Trần Thị Hoài An
+            p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
+                 | toàn từ vỏ bưởi ( phần vỏ xanh với những nốt nhỏ li ti)
+        .item
+          .image-slide-block.col-md-4
+            img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
+          .slide-text.col-md-8
+            h3   Nguyen Thi A
+            p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
+                 | toàn từ vỏ bưởi ( phần vỏ xanh với những nốt nhỏ li ti)
+        .item
+          .image-slide-block.col-md-4
+            img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
+          .slide-text.col-md-8
+            h3   Nguyen Hoang Thuy Linh
+            p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
+                 | toàn từ vỏ bưởi ( phần vỏ xanh với những nốt nhỏ li ti)
+
   .footer-top: .container-fluid
     .image-spa.col-md-2
       +link({title: 'Inpi', href: 'index.html'}).logo-footer
-        +img({src: 'images/spa-logo.png', alt: 'spa-logo'})  
+        +img({src: 'images/spa-logo-footer.png', alt: 'spa-logo'})  
     .info-spa
       h2 Viện Thẩm Mỹ Quốc Tế Dencos Luxury
       .row
