--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -22,6 +22,8 @@
 @import "responsive";
 // Plugin
 @import "plugin";
+@import "slick";
+@import "slick-theme";
 // Blocks
 @import "blocks/header";
 @import "blocks/menu";
