--- a/app/styles/_responsive.scss
+++ b/app/styles/_responsive.scss
@@ -1,8 +1,8 @@
 // Responsive
 @media #{$screen-sm-up} {
-  main {
+  /*main {
     margin-top: rem-calc(-60px);
-  }
+  }*/
   .btn-1 {
     padding: rem-calc(10px 20px);
   }
