--- a/app/styles/_structure.scss
+++ b/app/styles/_structure.scss
@@ -6,8 +6,8 @@ html {
   max-width: $container-lg + $grid-gutter-width;
 }
 
-main {
+/*main {
   position: relative;
   z-index: 1;
   margin-top: rem-calc(-30px);
-}
+}*/
