--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -9,6 +9,4 @@ block vars
   -isHome = true
 
 block container
-  //- include blocks/guide
-  //- include blocks/list-button
-  //- include blocks/table-public-enquiry
+  include blocks/home-content
