--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -8,13 +8,17 @@ header
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='#')
+          a(href='#')
             img(src='images/spa-logo.png', alt='spa-logo')
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li.active
-              a(href='#') Home
+              a(href='#') TRANG CHỦ
             li
-              a(href='#about') About
+              a(href='#about') GIỚI THIỆU
             li
-              a(href='#contact') Contact
+              a(href='#contact') CĂNG DA MẶT
+            li
+              a(href='#contact') BÍ QUYẾT LÀM ĐẸP
+            li
+              a(href='#contact') LIÊN HỆ
