remove class container-fruit

--- a/app/views/layouts/layout.jade
+++ b/app/views/layouts/layout.jade
@@ -29,7 +29,7 @@ html(class="no-js", lang="en")
     //- include ../blocks/sticky-nav
     include ../blocks/header
     //- include ../blocks/top-banner
-    main: .container-fluid
+    main: .container
       block container
     include ../blocks/script
     include ../blocks/footer
