--- a/app/views/blocks/home-content.jade
+++ b/app/views/blocks/home-content.jade
@@ -16,3 +16,49 @@
       img.img-circle(src="images/img-home/img-mb-hp08.png", alt="images")
       .item-slider.item-slider-three
         p Trang thiết bị tối tân, không gian là sự hòa quyệt giữa vẻ lãng mạn, sang trọng của phong cách Pháp và cảm giác ấm cúng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố
+.row
+  .top-content
+    .title
+      h2 DỊCH VỤ NỔI BẬT
+    .row
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp01.png", alt="images")
+        .content
+          p.title-item Căng da trẻ hóa bằng chỉ Cog Lift và chỉ Collagen 4D
+          p Trẻ hóa da và đường nét khuôn mặt bằng sợi chỉ sinh học không phẫu thuật là phương pháp xóa bỏ các dấu hiệu lão hóa như nếp nhăn, da chảy xệ, chùng nh...
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp02.png", alt="images")
+        .content
+          p.title-item Trẻ hóa da chuyên sâu cao cấp bằng chỉ vàng 24k và chỉ Cog Lift 4D
+          p Theo từng bước phát triển của ngành phổ thuật thẩm mỹ hiện đại, chất lượng sợi chỉ nâng cơ trong nghành thẩm mỹ trẻ hóa da chuyên nghiệp không phẩu thuật ngày cà...
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp03.png", alt="images")
+        .content
+          p.title-item Vampire Facelift trẻ hóa - điêu khắc khuôn mặt
+          p Vampire Facelift là liệu pháp trị liệu da lừng danh trong nghành thẩm mỹ hiện đại trên thế giới. Công nghệ này còn được biết đến với tên gọi Dracula Th...
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp04.png", alt="images")
+        .content
+          p.title-item Căng da mặt bằng chỉ vàng
+          p Công nghệ căng da bằng chỉ vàng có xuất xứ từ Hàn Quốc - xứ sở được coi là kinh đô của ngành thẩm mỹ hiện đại. Công nghệ căng da bằng chỉ vàng 24k đượ...
+    .row
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp05.png", alt="images")
+        .content
+          p.title-item Căng da trẻ hóa bằng chỉ Cog Lift và chỉ Collagen 4D
+          p Trẻ hóa da và đường nét khuôn mặt bằng sợi chỉ sinh học không phẫu thuật là phương pháp xóa bỏ các dấu hiệu lão hóa như nếp nhăn, da chảy xệ, chùng nh...
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp01.png", alt="images")
+        .content
+          p.title-item Trẻ hóa da chuyên sâu cao cấp bằng chỉ vàng 24k và chỉ Cog Lift 4D
+          p Theo từng bước phát triển của ngành phổ thuật thẩm mỹ hiện đại, chất lượng sợi chỉ nâng cơ trong nghành thẩm mỹ trẻ hóa da chuyên nghiệp không phẩu thuật ngày cà...
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp06.png", alt="images")
+        .content
+          p.title-item Vampire Facelift trẻ hóa - điêu khắc khuôn mặt
+          p Vampire Facelift là liệu pháp trị liệu da lừng danh trong nghành thẩm mỹ hiện đại trên thế giới. Công nghệ này còn được biết đến với tên gọi Dracula Th...
+      .col-md-3.col-xs-12
+        img(src="images/img-home/img-hp01.png", alt="images")
+        .content
+          p.title-item Căng da mặt bằng chỉ vàng
+          p Công nghệ căng da bằng chỉ vàng có xuất xứ từ Hàn Quốc - xứ sở được coi là kinh đô của ngành thẩm mỹ hiện đại. Công nghệ căng da bằng chỉ vàng 24k đượ...
