--- a/app/views/blocks/home-content.jade
+++ b/app/views/blocks/home-content.jade
@@ -62,3 +62,32 @@
         .content
           p.title-item Căng da mặt bằng chỉ vàng
           p Công nghệ căng da bằng chỉ vàng có xuất xứ từ Hàn Quốc - xứ sở được coi là kinh đô của ngành thẩm mỹ hiện đại. Công nghệ căng da bằng chỉ vàng 24k đượ...
+.row
+  .bottom-content
+    .title
+      h2 BÍ QUYẾT LÀM ĐẸP
+    .col-md-6
+      img(src="images/img-home/img-hp08.png", alt="images")
+      .item-content
+        h4 PHẠM HƯƠNG GIỮ DÁNG CHUẨN TRƯỚC "GIỜ G" NHƯ THẾ NÀO
+        p Ngay sau khi đăng quang ngôi vị cao nhật của cuộc thi Hoa Hậu Hoàn Vũ Việt Nam 2015, Phạm Hương được coi là một trong những hoa hậu được nhiêu người thừa nhận nhất về nhăn sắc và khí chất hơn người...
+        ul
+          li
+            a(href="#") Nguyễn Cao Kỳ Duyên trẻ đẹp khó tin ở tuổi 50
+          li
+            a(href="#") Á hậu hoàn vũ Ngô Trà My uống nước mía, giảm 10kg
+          li
+            a(href="#") Tại sao Hiền Thục lại trẻ lại trẻ lâu đến vậy?
+    .col-md-6
+      img(src="images/img-home/img-hp07.png", alt="images")
+      .item-content
+        h4 PHẠM HƯƠNG GIỮ DÁNG CHUẨN TRƯỚC "GIỜ G" NHƯ THẾ NÀO
+        p Ngay sau khi đăng quang ngôi vị cao nhật của cuộc thi Hoa Hậu Hoàn Vũ Việt Nam 2015, Phạm Hương được coi là một trong những hoa hậu được nhiêu người thừa nhận nhất về nhăn sắc và khí chất hơn người...
+        ul
+          li
+            a(href="#") Nguyễn Cao Kỳ Duyên trẻ đẹp khó tin ở tuổi 50
+          li
+            a(href="#") Á hậu hoàn vũ Ngô Trà My uống nước mía, giảm 10kg
+          li
+            a(href="#") Tại sao Hiền Thục lại trẻ lại trẻ lâu đến vậy?
+    img(src="images/img-home/img-hp09.png", alt="images")
