Update static html.

--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -17,8 +17,8 @@ header
             li
               a(href='#about') GIỚI THIỆU
             li
-              a(href='#contact') CĂNG DA MẶT
+              a(href='/facelifts.html') CĂNG DA MẶT
             li
-              a(href='#contact') BÍ QUYẾT LÀM ĐẸP
+              a(href='/contact.html') BÍ QUYẾT LÀM ĐẸP
             li
-              a(href='#contact') LIÊN HỆ
+              a(href='/contact.html') LIÊN HỆ
