Add file contact.

--- a/app/views/blocks/contact-content.jade
+++ b/app/views/blocks/contact-content.jade
@@ -3,36 +3,39 @@
     .title.text-left
       h2 LIÊN HỆ
     .row
-      .col-md-12
-        img(src='imagesmap', alt='google map')
-    .row
-      .col-md-6.col-xs-12
-        .contact-block
+      .col-md-12.map_container
+        #map_canvas.map_canvas
+    .row.contact-top
+      .col-md-6.col-xs-12.contact-block
+        div
           .image-block
             img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
-          .text-block
-            i Cơ sở chính
-            p Chi nhánh vũng tàu
-      .col-md-6.col-xs-12
-        .contact-block
+          .text-block.text-left
+            i Cơ sở chính:
+            p 559-561 Trần Hưng Đạo, P.Cầu Kho, Q.1. HCM
+            p Tel: +84 (0)8.710.96.999 - Mobile: +84.906.8888.36
+      .col-md-6.col-xs-12.contact-block
+        div
           .image-block
             img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
-          .text-block
-            i Cơ sở chính
-            p Chi nhánh vũng tàu
-    .row
-      .col-md-6.col-xs-12
-        .contact-block
+          .text-block.text-left
+            i Chi nhánh Hà Nội:
+            p 135-137 Bùi Thị Xuân, Quận Hai Bà Trưng, Hà Nội
+            p Tel: +04.6689.2299 - Mobile: +84.902.8888.36
+    .row.contact-bottom
+      .col-md-6.col-xs-12.contact-block
+        div
           .image-block
             img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
-          .text-block
-            i Cơ sở chính
-            p Chi nhánh vũng tàu
-      .col-md-6.col-xs-12
-        .contact-block
+          .text-block.text-left
+            i Chi nhánh Vũng Tàu:
+            p 227A Lê Hồng Phong, P.8, TP.Vũng Tàu
+            p Tel: +846.435.54.855 - Mobile: +84.906.8888.36
+      .col-md-6.col-xs-12.contact-block
+        div
           .image-block
             img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
-          .text-block
-            i Cơ sở chính
-            p Chi nhánh vũng tàu
-
+          .text-block.text-left
+            i Chi nhánh Cần Thơ:
+            p 357 đường 30/4, P.Hưng Lợi, Q.Ninh Kiều, TP.Cần Thơ
+            p Tel: +847.106.284.999
