--- a/app/views/blocks/script.jade
+++ b/app/views/blocks/script.jade
@@ -1,5 +1,6 @@
 script(src="js/l10n.js")
 script(src="js/libs.js")
+script(src="http://maps.googleapis.com/maps/api/js")
 script(src="js/script.js")
 //- Only use on development environment
 script(src="//localhost:35729/livereload.js")
