Update static html.

--- a/app/views/blocks/footer.jade
+++ b/app/views/blocks/footer.jade
@@ -1,6 +1,6 @@
 footer.main-footer.hidden-print
   .idea-customer: .container-fluid
-    .idea-header.col-md-3
+    .idea-header.col-md-3.visible-md.visible-lg
       .text-block.idea-text
         p  Ý KIẾN
         p  KHÁCH HÀNG
