--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -1,6 +1,6 @@
 header
   .container-fruit.header-image
-    nav.navbar
+    nav.navbar.visible-md.visible-lg
       .container
         .navbar-header
           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
@@ -8,14 +8,14 @@ header
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a(href='#')
+          a(href='/index.html')
             img(src='images/spa-logo.png', alt='spa-logo')
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li.active
-              a(href='#') TRANG CHỦ
+              a(href='/index.html') TRANG CHỦ
             li
-              a(href='#about') GIỚI THIỆU
+              a(href='/about.html') GIỚI THIỆU
             li
               a(href='/facelifts.html') CĂNG DA MẶT
             li
