--- a/app/styles/_variable.scss
+++ b/app/styles/_variable.scss
@@ -71,7 +71,7 @@ $link-hover-decoration: underline !default;
 //## Font, line-height, and color for body text, headings, and more.
 
 $icons-font: "icons";
-$font-inpi-regular:   "Times New Roman" !default;
+$font-inpi-regular:   "sans-serif" !default;
 $font-inpi-bold:   "inpi-bold-webfont" !default;
 $font-inpi-thin:   "inpi-thin-webfont" !default;
 
