--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -41,3 +41,4 @@
 @import "blocks/home-content";
 @import "blocks/contact-content";
 @import "blocks/about-content";
+@import "blocks/beauty-secrets-content";
