--- a/app/views/blocks/about-content.jade
+++ b/app/views/blocks/about-content.jade
@@ -10,7 +10,9 @@
       img.hidden-xs.w-img(src="images/img-about/img-06.png", alt="images")
       img.visible-xs.w-img(src="images/img-about/img-06.png", alt="images")
     .col-md-4.hidden-xs
-      h4 GỬI CÂU HỎI TƯ VẤN
+      h4
+        i.arow-icon
+        | GỬI CÂU HỎI TƯ VẤN
       form(action="submit")
         input.form-control(type="text",placeholder="Họ tên*:")
         input.form-control(type="text",placeholder="Email*:")
