--- a/app/styles/blocks/about-content.scss
+++ b/app/styles/blocks/about-content.scss
@@ -1,51 +1,61 @@
 .row.mg-b {
     margin-bottom: 30px;
 }
+
 .row {
-  .about-content {
-    padding: 30px 0;
-    .col-md-8 {
-      img.top-img {
-          width: 100%;
-          border-bottom: 5px solid #bc0007;
-      }
-      .w-img {
-          width: 100%;
-      }
-      h4 {
-        font-weight: bold;
-        margin-top: 40px;
-      }
-      p {
-        margin: 15px 0;
-      }
+    .about-content {
+        padding: 30px 0;
+        .col-md-8 {
+            img.top-img {
+                width: 100%;
+                border-bottom: 5px solid #bc0007;
+            }
+            .w-img {
+                width: 100%;
+            }
+            h4 {
+                font-weight: bold;
+                margin-top: 40px;
+            }
+            p {
+                margin: 15px 0;
+            }
+        }
+        .col-md-4 {
+            h4 {
+                margin: 0;
+                padding-bottom: 10px;
+            }
+            .form-control {
+                border-left: 3px solid #ec1d25;
+                margin-bottom: 10px;
+                height: 30px;
+            }
+            textarea {
+                width: 100%;
+                height: 80px;
+                padding: 6px 12px;
+            }
+            .btn-red {
+                margin-top: 15px;
+                padding: 5px 20px;
+                background: #ec1d25;
+                color: #fff !important;
+                font-family: sans-serif;
+                font-weight: bold;
+            }
+            .mr-t {
+                margin-top: 20px;
+            }
+        }
     }
-    .col-md-4 {
-      h4 {
-        margin: 0;
-        padding-bottom: 10px;
-      }
-      .form-control {
-        border-left: 3px solid #ec1d25;
-        margin-bottom: 10px;
-        height: 30px;
-      }
-      textarea {
-          width: 100%;
-          height: 80px;
-          padding: 6px 12px;
-      }
-      .btn-red {
-        margin-top: 15px;
-        padding: 5px 20px;
-        background: #ec1d25;
-        color: #fff !important;
-        font-family: sans-serif;
-        font-weight: bold;
-      }
-      .mr-t {
-        margin-top: 20px;
-      }
-    }
-  }
+}
+
+.arow-icon {
+    width: 35px;
+    height: 18px;
+    display: inline-block;
+    background-image: url(../images/img-about/logo.png);
+    background-repeat: no-repeat;
+    margin-right: 10px;
 }
