Update static html.

--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -1,5 +1,5 @@
 header
-  .container-fruit.header-image
+  .container-fruit
     nav.navbar.visible-md.visible-lg
       .container
         .navbar-header
