--- a/app/views/blocks/home-content.jade
+++ b/app/views/blocks/home-content.jade
@@ -67,7 +67,7 @@
     .title
       h2 BÍ QUYẾT LÀM ĐẸP
     .col-md-6
-      img(src="images/img-home/img-hp08.png", alt="images")
+      img.img-responsive(src="images/img-home/img-hp08.png", alt="images")
       .item-content
         h4 PHẠM HƯƠNG GIỮ DÁNG CHUẨN TRƯỚC "GIỜ G" NHƯ THẾ NÀO
         p Ngay sau khi đăng quang ngôi vị cao nhật của cuộc thi Hoa Hậu Hoàn Vũ Việt Nam 2015, Phạm Hương được coi là một trong những hoa hậu được nhiêu người thừa nhận nhất về nhăn sắc và khí chất hơn người...
@@ -79,7 +79,7 @@
           li
             a(href="#") Tại sao Hiền Thục lại trẻ lại trẻ lâu đến vậy?
     .col-md-6
-      img(src="images/img-home/img-hp07.png", alt="images")
+      img.img-responsive(src="images/img-home/img-hp07.png", alt="images")
       .item-content
         h4 PHẠM HƯƠNG GIỮ DÁNG CHUẨN TRƯỚC "GIỜ G" NHƯ THẾ NÀO
         p Ngay sau khi đăng quang ngôi vị cao nhật của cuộc thi Hoa Hậu Hoàn Vũ Việt Nam 2015, Phạm Hương được coi là một trong những hoa hậu được nhiêu người thừa nhận nhất về nhăn sắc và khí chất hơn người...
@@ -90,4 +90,5 @@
             a(href="#") Á hậu hoàn vũ Ngô Trà My uống nước mía, giảm 10kg
           li
             a(href="#") Tại sao Hiền Thục lại trẻ lại trẻ lâu đến vậy?
-    img(src="images/img-home/img-hp09.png", alt="images")
+    img.img-responsive.visible-md.visible-lg(src="images/img-home/img-hp09.png", alt="images")
+    img.img-responsive.visible-xs(src="images/img-home/img-mb-hp07.png", alt="images")
