--- a/app/views/layouts/layout.jade
+++ b/app/views/layouts/layout.jade
@@ -26,9 +26,9 @@ html(class="no-js", lang="en")
     script(src="js/modernizr.js")
     block script
   body(class=bodyClass)
-    //- include ../blocks/sticky-nav
+    .container-fruit
+      img.img-responsive(src='images/cangdamat-header-image.png', alt='banner page')
     include ../blocks/header
-    //- include ../blocks/top-banner
     main: .container
       block container
     include ../blocks/script
