--- a/app/styles/blocks/header.scss
+++ b/app/styles/blocks/header.scss
@@ -1,66 +1,28 @@
-.header-image {
-    height: 628px;
-    background-image: url(../images/cangdamat-header-image.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    .navbar {
-        background-image: url(../images/nav-background.png);
-        background-repeat: repeat-x;
-        border-radius: 0;
-        opacity: 0.7;
-        margin-bottom: 0;
-        border: none;
-        top: 27px;
-        .navbar-nav {
-            margin-left: 87px;
-            li {
-                a {
-                    color: $white;
-                    padding: 26px 15px;
-                }
-                a:hover{
-                   background-color: #bb0007; 
-                }
+.navbar {
+    background-image: url(../images/nav-background.png);
+    background-repeat: repeat-x;
+    border-radius: 0;
+    opacity: 0.7;
+    margin-bottom: 0;
+    border: none;
+    position: absolute;
+    top: 27px;
+    width: 100%;
+    .navbar-nav {
+        margin-left: 87px;
+        li {
+            a {
+                color: $white;
+                padding: 26px 15px;
             }
-            .active {
-                a {
-                    background-color: #bb0007;
-                }
+            a:hover {
+                background-color: #bb0007;
+            }
+        }
+        .active {
+            a {
+                background-color: #bb0007;
             }
         }
     }
 }
-
-
-/* Reponsive */
-
-// @media #{$screen-xs-only} {
-//     .top-banner {
-//         .title-block {
-//             margin-top: rem-calc(35px);
-//             max-width: rem-calc(180px);
-//         }
-//     }
-// }
-// @media #{$screen-sm-up} {
-//     .top-banner {
-//         height: rem-calc(255px);
-//         .title-block {
-//             max-width: rem-calc(565px);
-//             margin-top: rem-calc(35px);
-//             .title-page {
-//                 font-size: rem-calc(40px);
-//             }
-//         }
-//     }
-//     .main-header {
-//         padding: rem-calc(19px 0 0);
-//     }
-// }
-// @media #{$screen-md-up} {
-//     .top-banner {
-//         .title-block {
-//             max-width: rem-calc(930px);
-//         }
-//     }
-// }
