--- a/app/views/blocks/footer.jade
+++ b/app/views/blocks/footer.jade
@@ -7,34 +7,45 @@ footer.main-footer.hidden-print
     .slide-footer.col-md-9
       .single-slick
         .item
-          .image-slide-block.col-md-4
+          .image-slide-block.col-md-4.col-xs-3
             img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
-          .slide-text.col-md-8
+          .slide-text.col-md-8.col-xs-9
+            .text-block.idea-text.visible-xs
+              p  Ý KIẾN KHÁCH HÀNG
             h3   Trần Thị Hoài An
             p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
                  | toàn từ vỏ bưởi ( phần vỏ xanh với những nốt nhỏ li ti)
         .item
-          .image-slide-block.col-md-4
+          .image-slide-block.col-md-4.col-xs-3
             img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
-          .slide-text.col-md-8
+          .slide-text.col-md-8.col-xs-9
+            .text-block.idea-text.visible-xs
+              p  Ý KIẾN KHÁCH HÀNG
             h3   Nguyen Thi A
             p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
                  | toàn từ vỏ bưởi ( phần vỏ xanh với những nốt nhỏ li ti)
         .item
-          .image-slide-block.col-md-4
+          .image-slide-block.col-md-4.col-xs-3
             img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
-          .slide-text.col-md-8
+          .slide-text.col-md-8.col-xs-9
+            .text-block.idea-text.visible-xs
+              p  Ý KIẾN KHÁCH HÀNG
             h3   Nguyen Hoang Thuy Linh
             p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
                  | toàn từ vỏ bưởi ( phần vỏ xanh với những nốt nhỏ li ti)
 
   .footer-top: .container-fluid
-    .image-spa.col-md-2
+    .image-spa.col-md-2.col-xs-3
       +link({title: 'Inpi', href: 'index.html'}).logo-footer
-        +img({src: 'images/spa-logo-footer.png', alt: 'spa-logo'})  
-    .info-spa
+        +img({src: 'images/spa-logo-footer.png', alt: 'spa-logo'})
+    .info-spa.col-md-10.col-xs-9
       h2 Viện Thẩm Mỹ Quốc Tế Dencos Luxury
-      .row
+      ul.link-list.list-unstyled.visible-xs
+            li Cơ sở chính:559-561 Trần Hưng Đạo,P.Cầu Kho,Q.1.HCM
+            li Tel:+84(0)8.710.96.999 - Mobile:+84.906.8888.36
+            li Chi nhánh Vũng Tàu:227A Lê Hồng Phong,P8,TP.Vũng Tàu
+            li Tel:+846.435.45.855 - Mobile:+84.906.8888.36
+      .row.hidden-xs
         .item.col-md-3.col-sm-6
           ul.link-list.list-unstyled
             li Cơ sở chính:559-561 Trần Hưng Đạo,P.Cầu Kho,Q.1.HCM
@@ -57,6 +68,7 @@ footer.main-footer.hidden-print
               li Giới thiệu
           img(src='images/dmca-protected.png', alt='dmca-protected')
           p Tất cả các phẫu thuật và gây mê đều thực hiện tại Bệnh viện
+    p.visible-xs.mail Website:www.dencosluxury.com / Email:tuvan@dencosluxury.com
   .footer-bottom: .container-fluid
     ul.social-list.list-unstyled.pull-right
       li
