Update source code.

--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -1,6 +1,6 @@
 header
   .container-fruit
-    nav.navbar.visible-md.visible-lg
+    nav.navbar
       .container
         .navbar-header
           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
@@ -19,6 +19,6 @@ header
             li
               a(href='/facelifts.html') CĂNG DA MẶT
             li
-              a(href='/contact.html') BÍ QUYẾT LÀM ĐẸP
+              a(href='/beauty-secrets.html') BÍ QUYẾT LÀM ĐẸP
             li
               a(href='/contact.html') LIÊN HỆ
